--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "skeleton",
-  "version": "1.0.0",
+  "version": "0.2.0",
   "devDependencies": {
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt": "~0.4.1",
-    "grunt-contrib-sass": "~0.5.0",
-    "grunt-contrib-connect": "~0.5.0"
+    "grunt": "^0.4.5",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
